git-svn-id: https://svn.code.sf.net/p/quorum/code/trunk@1057 df4a1cb3-768c-44ce-9dd6-df0ee0bb247f